@@ -163,6 +163,13 @@ If this option is specified, so must \fB\-\-manufacturer\-id\fR.
 #include <@top_srcdir@/common/man/manpage-common-workaround-outofband-common-text.man>
 #include <@top_srcdir@/common/man/manpage-common-workaround-outofband-15-text.man>
 #include <@top_srcdir@/common/man/manpage-common-workaround-outofband-20-text.man>
+.LP
+\fImalformedack\fR - This workaround flag will ignore malformed PET
+acknowledge responses and assume any PET acknowledge response from the
+remote machine is valid.  It works around remote systems that respond
+with PET acknowledge requests with invalid/malformed IPMI payloads.
+Those hitting this issue may see "session timeout" errors when
+executing a PET acknowledge.  Issue observed on Dell Poweredge R610.
 #include <@top_srcdir@/common/man/manpage-common-workaround-extra-text.man>
 #include <@top_srcdir@/common/man/manpage-common-oem-interpretation.man>
 .LP
@@ -183,7 +190,7 @@ Interpret a PET using a previously stored SDR cache.
 .PP
 Instead of outputting trap interpretation, send a PET acknowledge using the trap data.
 .PP
-.B # ipmi-pet --pet-acknowledge 356224 0x44 0x45 0x4c 0x4c 0x50 0x00 0x10 0x59 0x80 0x43 0xb2 0xc0 0x4f 0x33 0x33 0x58 0x00 0x02 0x19 0xe8 0x7e 0x26 0xff 0xff 0x20 0x20 0x04 0x20 0x73 0x18 0x00 0x80 0x01 0xff 0x00 0x00 0x00 0x00 0x00 0x19 0x00 0x00 0x02 0xa2 0x01 0x00 0xc1
+.B # ipmi-pet -h ahost --pet-acknowledge 356224 0x44 0x45 0x4c 0x4c 0x50 0x00 0x10 0x59 0x80 0x43 0xb2 0xc0 0x4f 0x33 0x33 0x58 0x00 0x02 0x19 0xe8 0x7e 0x26 0xff 0xff 0x20 0x20 0x04 0x20 0x73 0x18 0x00 0x80 0x01 0xff 0x00 0x00 0x00 0x00 0x00 0x19 0x00 0x00 0x02 0xa2 0x01 0x00 0xc1
 #include <@top_srcdir@/common/man/manpage-common-reporting-bugs.man>
 .SH "COPYRIGHT"
 Copyright \(co 2011-2012 FreeIPMI Core Team
