@@ -1,5 +1,9 @@
 2011-12-07  Albert Chu <chu11@llnl.gov>
 
+	* ipmi-pet/: Support "malformedack" workaround option.
+	
+2011-12-07  Albert Chu <chu11@llnl.gov>
+
 	* common/man/: Various additions, tweaks, and modifications.
 	
 2011-12-06  Albert Chu <chu11@llnl.gov>
